--- a/Lab9/Lab9/Themes/Light.xaml
+++ b/Lab9/Lab9/Themes/Light.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="background" Color="Gray"/>
-    <SolidColorBrush x:Key="foreground" Color="White"/>
+    <SolidColorBrush x:Key="background" Color="White"/>
+    <SolidColorBrush x:Key="foreground" Color="Black"/>
     <Style TargetType="Menu">
         <Setter Property="Background" Value="{StaticResource background}"/>
         <Setter Property="Foreground" Value="{StaticResource foreground}"/>
